fix: chart to support local-path deployment with webhooks

--- a/charts/digital-product-pass/templates/configmap-backend.yaml
+++ b/charts/digital-product-pass/templates/configmap-backend.yaml
@@ -62,7 +62,7 @@ data:
         catalog: {{ .Values.backend.edc.apis.catalog }}
         negotiation: {{ .Values.backend.edc.apis.negotiation }}
         transfer: {{ .Values.backend.edc.apis.transfer }}
-        receiverEndpoint: "https://{{ .Values.backend.hostname }}/endpoint"
+        receiverEndpoint: "https://webhook.site/{{ .Values.backend.edc.webhook }}?processId=%s&endpointId=%s"
         delay:  {{ .Values.backend.edc.delay }} # -- Negotiation status Delay in milliseconds in between async requests [<= 500]
       # -- security configuration
       security:
@@ -131,7 +131,7 @@ data:
         # -- configure the data transfer
         dataTransfer:
           # -- encrypt the passport when he arrives from the edc data plane
-          encrypt: {{ .Values.backend.passport.encrypt | default true }} 
+          encrypt: {{ .Values.backend.passport.encrypt | default false }} 
           # -- the indent from the passport
           indent: true
           # -- directory to store the passport when is not linked to a process
